@@ -1,2 +1,3 @@
-SUBDIRS = editable_cells list tree drag_and_drop popup filter
+SUBDIRS = editable_cells list tree drag_and_drop popup filter filter_modify
+
 
